# Titanic-ML-App

./: .gitignore  README.md  pyproject.toml  run_app.psl  run_app.sh
Models/: best_model.pkl
Notebooks/: Exploratory_analysis.ipynb  Pycaret_models.ipynb
src/backend/: api.py  run_backend.psl  run_backend.sh
src/frontend/: app.py  run_frontend.psl  run_frontend.sh
src/frontend/.streamlit/: config.toml
