[project]
name = "titanic-ml-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "pycaret>=3.3.2",
    "pydantic>=2.12.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
